added new components

--- a/src/scss/base.scss
+++ b/src/scss/base.scss
@@ -4,6 +4,7 @@ $roboto: 'Roboto', sans-serif;
 $container: 800px;
 $innerContainer: 600px;
 $radius: 10px;
+$titleHuge: 30px;
 $title: 24px;
 $description: 22px;
 $regular: 20px;
