--- a/src/components/ModalWindow/ModalWindow.scss
+++ b/src/components/ModalWindow/ModalWindow.scss
@@ -1,3 +1,5 @@
+@import '../../scss/base.scss';
+
 .modal-window {
   width: 100%;
   height: 100vh;
@@ -12,5 +14,56 @@
 
   &_closed {
     display: none;
+  }
+
+  &-form {
+    max-width: $container;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    margin: 0 auto;
+    padding: 60px 0;
+    background: #fff;
+    border-radius: $radius;
+
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.25);
+
+    &__title {
+      width: 60%;
+      text-align: left;
+      font-size: $titleHuge;
+      padding-bottom: 30px;
+    }
+  }
+}
+
+.form-container {
+  margin-top: 30px;
+  width: 60%;
+  padding: 10px 0;
+
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  background: rgba(223, 255, 30, 0.5);
+  border-radius: $radius;
+
+  &__input {
+    width: 100%;
+    border: none;
+    outline: none;
+    background: transparent;
+
+    font-size: $regular;
+    padding: 0 10px;
+    padding-left: 20px;
+
+    &::placeholder {
+      color: black;
+    }
   }
 }
