Changed structure and added more functionality

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -9,7 +9,7 @@
   justify-content: space-between;
   align-items: center;
 
-  background: #963eef;
+  background: $purple;
   border-radius: $radius;
 
   font-size: $title;
