--- a/src/components/AddButton/AddButton.scss
+++ b/src/components/AddButton/AddButton.scss
@@ -24,3 +24,11 @@
     font-size: $title;
   }
 }
+
+.add-button_modal {
+  margin-top: 40px;
+  margin-right: 0;
+
+  border: none;
+  outline: none;
+}
