--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,3 +14,28 @@ body {
 
   font-family: $roboto;
 }
+
+.custom-scroll {
+  scrollbar-color: $purple;
+  scrollbar-width: thin;
+}
+
+.custom-scroll::-moz-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+.custom-scroll::-webkit-scrollbar {
+  width: 2px;
+  height: 2px;
+}
+
+.custom-scroll::-webkit-scrollbar-track {
+  background: none;
+}
+
+.custom-scroll::-webkit-scrollbar-thumb {
+  background-color: $purple;
+  border-radius: 1vmax;
+  cursor: pointer;
+}
